remove influencer directory button on mobile for now, fix logo issue of it not showing up in production

--- a/app/assets/stylesheets/astyle.scss
+++ b/app/assets/stylesheets/astyle.scss
@@ -280,7 +280,7 @@ main {
   height: 75%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
