--- a/app/assets/stylesheets/bstyle.scss
+++ b/app/assets/stylesheets/bstyle.scss
@@ -35,6 +35,10 @@
         max-width: 300px;
     }
 
+    .discountdeck .header-nav {
+        display: none;
+    }
+
     .discountdeck #social-icons a i {
         font-size: 11px;
         width: 21px;
